syntax="proto3";

package shop;

option go_package="/shop";

import "bitjump_product.proto";

service ShopService {
  // 注册店铺
  rpc Register(RegisterShopReq) returns (RegisterShopResp) {}
  // 获取用户所开的店铺id
  rpc GetShopId(GetShopIdReq) returns (GetShopIdResp) {}
  // 获取店铺信息
  rpc GetShopInfo(GetShopInfoReq) returns (GetShopInfoResp) {}
  // 更新店铺信息
  rpc UpdateShopInfo(UpdateShopInfoReq) returns (UpdateShopInfoResp) {}
  // 添加商品
  rpc AddProduct(AddProductReq) returns (AddProductResp) {}
  // 删除商品
  rpc DeleteProduct(DeleteProductReq) returns (DeleteProductResp) {}
  // 更新商品
  rpc UpdateProduct(UpdateProductReq) returns (UpdateProductResp) {}
  // 获取商品列表
  rpc GetProductList(GetProductListReq) returns (GetProductListResp) {}
}

message RegisterShopReq {
  uint32 user_id = 1;
  string shop_name = 2;
  string shop_address = 3;
  string shop_description = 4;
  string shop_avatar = 5;
}

message RegisterShopResp {
  uint32 shop_id = 1;
}

message GetShopIdReq {
  uint32 user_id = 1;
}

message UpdateShopInfoReq {
  uint32 shop_id = 1;
  string shop_name = 2;
  string shop_address = 3;
  string shop_description = 4;
  string shop_avatar = 5;
}

message UpdateShopInfoResp {
  bool res = 1;
}

message GetShopIdResp {
  uint32 shop_id = 1;
}

message GetShopInfoReq {
  uint32 shop_id = 1;
}

message GetShopInfoResp {
  string shop_name = 1;
  string shop_address = 2;
  string shop_description = 3;
  string shop_avatar = 4;
}

message AddProductReq {
  uint32 shop_id = 1;
  product.Product product = 2;
  bool status = 3;
}

message AddProductResp {
  uint32 product_id = 1;
}

message DeleteProductReq {
  uint32 shop_id = 1;
  uint32 product_id = 2;
}

message DeleteProductResp {
  bool res = 1;
}

message UpdateProductReq {
  uint32 shop_id = 1;
  product.Product product = 2;
}

message UpdateProductResp {
  bool res = 1;
}

message GetProductListReq {
  uint32 shop_id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
}

message GetProductListResp {
  repeated product.Product products = 1;
}


